[package]
name = "spo-crystal"
version = "0.2.0"
edition = "2021"
description = "3D content-addressable knowledge graph with VSA fingerprints and Jina embedding cache"

[dependencies]
rand = "0.8"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
